correcting article display on mobile

--- a/src/styles/components/_article.scss
+++ b/src/styles/components/_article.scss
@@ -1,14 +1,4 @@
 .c-article {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-}
-
-.c-article__container {
   background: $color-bg;
   position: absolute;
   top: 0;
@@ -18,16 +8,8 @@
   padding-top: 10.4167vmax;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
-  z-index: 3;
-}
+  z-index: 2;
 
-.c-article--open {
-  display: block;
-
-  @include bp(medium) {
-    display: flex;
-    justify-content: center;
-  }
 }
 
 .c-article__img {
@@ -37,8 +19,7 @@
 .c-article__desc {
   padding: 1.5em 1.5em 0;
 
-  >h1,
-  p {
+  > h1, p {
     margin-bottom: 1.625rem;
   }
 
@@ -55,14 +36,15 @@
 .c-article__inner {
   background: $color-white;
   position: absolute;
+  height: min-content;
 
 
   @include bp(medium) {
     margin-left: calc((100% - 66.6667%) / 2);
     width: 66.6667%;
-  }
+    margin-bottom: 10.4167vmax
 
-  margin-bottom: 10.4167vmax;
+  }
 }
 
 .c-article__text {
@@ -77,7 +59,7 @@
 
 
   @include bp(medium) {
-    >p {
+    > p {
       width: 36.458vw;
       margin-bottom: 1.625rem;
       padding: 0;
